--- a/index.html
+++ b/index.html
@@ -3,10 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Code Quiz</title>
 </head>
 <body>
+    <div class="container">
+        <!--Header section with Highscores and Timer-->
+        <div class="row">
+            
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="header">
+                <!--Link to Highscores page-->
+                <a href="highscores.html" id="highscores">View Highscores</a>
+                <!--Timer counting down-->
+                <p id="timer">Time: 0</p>
+            </div>
+        </div>
+        <!--Quiz start page-->
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="main">
+                <h1>Coding Quiz Challenge</h1>
+                <p>
+                    Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!
+                </p>
+                <button id="button">Start Quiz!</button>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
