started scores js

--- a/highscores.html
+++ b/highscores.html
@@ -16,8 +16,8 @@
                 </div>
 
                 <!--Numbered list of initials and scores-->
-                <div class="row" id="scoreslist">
-                    <br>
+                <div class="row" id="blank">
+                    <ol id="scoreslist"></ol>
                 </div>
                 <br>
 
