started index js

--- a/index.html
+++ b/index.html
@@ -22,11 +22,14 @@
         <!--Quiz start page-->
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6" id="main">
-                <h1>Coding Quiz Challenge</h1>
-                <p>
-                    Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!
-                </p>
-                <button id="button">Start Quiz!</button>
+                <div id="content">
+                    <h1>Coding Quiz Challenge</h1>
+                    <p>
+                        Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!
+                    </p>
+                    <button id="button">Start Quiz!</button>
+                </div>
+                
             </div>
         </div>
     </div>
