quiz timer scorekeeper created, still needs highscore list js

--- a/highscores.html
+++ b/highscores.html
@@ -30,6 +30,6 @@
         </div>
     </div>
 
-    <script src="scoresscript.js"></script>
+    <script src="./scoresscript.js"></script>
 </body>
 </html>
