--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                     </p>
                     <button id="button">Start Quiz!</button>
                 </div>
+                <div id="quiz"></div>
                 
             </div>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
