--- a/highscores.html
+++ b/highscores.html
@@ -11,18 +11,18 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" id="main">
-                <div class="row" id="highscores">
+                <div id="highscores">
                     <h1>Highscores</h1>
                 </div>
 
                 <!--Numbered list of initials and scores-->
-                <div class="row" id="blank">
-                    <ol id="scoreslist"></ol>
+                <div id="blank">
+                    <ul id="scoreslist"></ul>
                 </div>
                 <br>
 
                 <!--Button options-->
-                <div class="row">
+                <div>
                     <button id="backbutton"><a href="index.html">Go Back</a></button>
                     <button id="clearbutton">Clear Highscores</button>
                 </div>
