styling and js finished

--- a/highscores.html
+++ b/highscores.html
@@ -23,8 +23,8 @@
 
                 <!--Button options-->
                 <div>
-                    <button id="backbutton"><a href="index.html">Go Back</a></button>
-                    <button id="clearbutton">Clear Highscores</button>
+                    <button class="rounded" id="backbutton"><a href="index.html">Go Back</a></button>
+                    <button class="rounded" id="clearbutton">Clear Highscores</button>
                 </div>
             </div>
         </div>
