--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <div class="container">
         <!--Header section with Highscores and Timer-->
         <div class="row">
-            
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" id="header">
                 <!--Link to Highscores page-->
                 <a href="highscores.html" id="highscores">View Highscores</a>
@@ -27,7 +26,7 @@
                     <p>
                         Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by ten seconds!
                     </p>
-                    <button id="button">Start Quiz!</button>
+                    <button class="rounded" id="button">Start Quiz!</button>
                 </div>
                 <div id="quiz"></div>
                 
